updating nodebucket files

--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,3 +1,10 @@
+<!--=========================
+Name: Brittany Dockter
+Date: March 20, 2020
+Assignment: base-layout.component.html
+Description: html for main page
+==========================-->
+
 <div fxLayout="column">
 
   <!-- navigation -->
