--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,25 +6,34 @@ Description: html form for login
 ==========================-->
 
 <!-- login form -->
-<mat-card class="login-card">
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
+<div fxLayout="column">
+  <mat-card fxFlex class="login-container mat-elevation-z8">
+    <mat-card-title class="login-title mat-headline">Employee Login</mat-card-title><br />
+    <mat-card-subtitle class="login-subtitle mat-headline">You must enter a valid employee id to proceed
+    </mat-card-subtitle>
     <mat-card-content>
-      <form class="example-form">
-        <table class="example-full-width" cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field class="example-full-width">
-              <input matInput placeholder="Employee ID" [(ngModel)]="employeeId" name="employeeId" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-        </tr></table>
-      </form>
+      <mat-card class="mat-elevation-z0" fxLayout="column" fxLayoutGap="10px">
+        <form [formGroup]="form" (ngSubmit)="login(); form.reset()" #loginForm="ngForm">
+
+          <mat-card-content>
+
+            <mat-form-field fxFlex>
+              <input matInput [formControl]="form.controls ['empId']" placeholder="Employee ID" />
+              <mat-error *ngIf="form.controls['empId'].hasError('required') && form.controls['empId'].touched">
+                Employee ID is a required field.
+              </mat-error>
+              <mat-error *ngIf="form.controls['empId'].hasError('pattern') && form.controls['empId'].touched">
+                Employee ID must be a numerical value.
+              </mat-error>
+            </mat-form-field>
+
+          </mat-card-content>
+
+          <mat-card-actions>
+            <button type="submit" fxFlex mat-raised-button [disabled]="!form.valid" color="primary">Submit</button>
+          </mat-card-actions>
+        </form>
+      </mat-card>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="login()" color="primary">Submit</button>
-    </mat-card-actions>
   </mat-card>
+</div>
