--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,3 +1,10 @@
+/*=========================
+Name: Brittany Dockter
+Date: March 26, 2020
+Assignment: about.component.css
+Description: styling for the about page
+==========================*/
+
 .main-welcome {
     margin-top: 30px;
   }
