--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,10 @@
+/*=========================
+Name: Brittany Dockter
+Date: March 26, 2020
+Assignment: home.component.css
+Description: styling for drag and drop/home page
+==========================*/
+
 .main-welcome {
   margin-top: 30px;
 }
@@ -10,4 +17,53 @@
 .subtitle {
   text-align: center;
   font-size: 14px;
+}
+
+.task-title {
+  font-weight: lighter;
+}
+
+.tasks-container {
+  width: 35%;
+  margin: 0 auto;
+}
+
+.task-list {
+  border: solid 1px #ccc;
+  min-height: 60px;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+  display: block;
+}
+
+.task-card {
+  cursor: move;
+  min-height: 60px;
+  height: 68px;
+  font-size: 14px;
+  border-bottom: solid 1px #ccc
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .task-card:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
