--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,3 +1,10 @@
+<!--=========================
+Name: Brittany Dockter
+Date: March 26, 2020
+Assignment: not-found.component.html
+Description: html content for 404 error page
+==========================-->
+
 <div flLayout="column">
     <mat-card fxLayout style="margin-top: 15%; width: 50%; margin-left: 25%;" class="mat-elevation-z8">
       <mat-card-title style="text-align: center; font-size: 48px;" class="mat-headline">404</mat-card-title><br />
