--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@ Description: html form for login
 ==========================-->
 
 <!-- login form -->
-<div fxLayout="column">
+<div fxLayout="column" class="parent">
   <mat-card fxFlex class="login-container mat-elevation-z8">
     <mat-card-title class="login-title mat-headline">Employee Login</mat-card-title><br />
     <mat-card-subtitle class="login-subtitle mat-headline">You must enter a valid employee id to proceed
