--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -5,12 +5,12 @@ Assignment: not-found.component.html
 Description: html content for 404 error page
 ==========================-->
 
-<div flLayout="column">
-    <mat-card fxLayout style="margin-top: 15%; width: 50%; margin-left: 25%;" class="mat-elevation-z8">
-      <mat-card-title style="text-align: center; font-size: 48px;" class="mat-headline">404</mat-card-title><br />
-      <mat-card-subtitle style="text-align: center;" class="mat-headline">Page not found</mat-card-subtitle>
+<div flLayout="column" class="parent">
+    <mat-card fxLayout class="mat-elevation-z8 card">
+      <mat-card-title class="mat-headline card-title">404</mat-card-title><br />
+      <mat-card-subtitle class="card-subtitle">Page not found</mat-card-subtitle>
       <!-- add image and attribution -->
-      <mat-card-content style="text-align: center">
+      <mat-card-content class="card-content">
         <button mat-raised-button color="primary" routerLink="/">Return to dashboard</button>
       </mat-card-content>
     </mat-card>
