--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,24 +1,51 @@
 <div fxLayout="column" class="main-welcome" fxLayoutGap=10px>
     <h1 fxFlex class="title">
-      nodebucket 101<br />
+      <b>nodebucket</b><br />
       <span class="subtitle">
-        Facts about our task management application
+        Information about <b>nodebucket</b>, a task management application
       </span>
     </h1>
     <div class="about-content">
-      <mat-divider></mat-divider>
+      <mat-divider class="divider"></mat-divider>
       <br />
+      <div class="container">
       <p class="mat-body-for">
-        <span class="p-title mat-headline">Overview</span><br />
-        nodebucket is an employee management system where you can keep track of your work tasks. It's as simple as signing in and assigning yourself
-        new tasks
+        <span class="p-title mat-headline">What is nodebucket?</span><br />
+        <b>nodebucket</b> is a task management application designed for keeping track of tasks by 
+        dragging them from <b>To Do</b> to <b>Doing</b> to <b>Done</b>. This model of task management
+        helps to keep you organized and focused on what's next.
       </p>
-      <!-- add image and attribution -->
       <br />
       <p class="mat-body-for">
-        <span class="p-title mat-headline">Schedule</span><br />
-        Details about nodebucket
+        <span class="p-title mat-headline">Who should use nodebucket?</span><br />
+        This application is designed with employees in mind. This means that nodebucket is a great addition
+        to any company because it simplifies keeping track of objectives that need to be completed for the day 
+        or week. Employees can create a new task for any item they need to focus on and move it along to
+        each step they're on.
+      </p>
+      <br />
+      <p class="mat-body-for">
+        <span class="p-title mat-headline">What is nodebucket used for?</span><br />
+        <b>nodebucket</b> is best used for task management, meaning an employee can track their progress on specific tasks
+        by moving it from To Do to Doing. This let's them know what they're working on and where they are every step of the way.
+        This also allows managers to see how far along an employee is on a given project or what current task an employee is working on. 
+      </p>
+      <p class="mat-body-for">
+        <span class="p-title mat-headline">Why should you use nodebucket?</span><br />
+        There are many task management software applications available on the market, but nodebucket is a very easy-to-use application. 
+        The simple drag and drop from each column allows for quick updates on each task. You can even remove tasks that are no longer
+         relevant. This method of managing tasks allows it to be usable by anyone. 
+        </p>
+        
+      <!-- add image and attribution -->
+      <!-- I created the bucket image myself -->
+      
+      <br />
+      <p class="mat-body-for thanks-container">
+        <span class="p-title mat-headline">Thank you for checking out <b>nodebucket</b>!</span><br />
+        We hope you consider using nodebucket as your task management service.
         <!-- 250 word minimum -->
       </p>
+    </div>
     </div>
   </div>
